# coffee

./: .gitignore  README.md
back/: app.py  database.py  db_manager.py  debug.py  pyproject.toml  requirements.txt  run.py  setup_sqlite.sh
back/config/: menu.yml
back/config/menus/: Are.yml  텐퍼센트.yml  파란만잔.yml
back/data/: coffee_orders.db  orders.json
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue  main.js
front/src/components/: AdminPanel.vue  OrderForm.vue
front/src/router/: index.js
front/src/views/: KioskView.vue
